k8s-prod/app/knjizenje-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knjizenje
  namespace: racunovodstvo-prod
  labels:
    app: knjizenje
spec:
  replicas: 1
  selector:
    matchLabels:
      app: knjizenje
  template:
    metadata:
      labels:
        app: knjizenje
    spec:
      serviceAccount: discovery-client
      containers:
        - image: ghcr.io/raf-si-2021/racunovodstvo-knjizenje:latest
          name: racunovodstvo-knjizenje-service
          imagePullPolicy: Always
          ports:
            - name: knjizenje
              containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: knjizenje
  namespace: racunovodstvo-prod
  labels:
    app: knjizenje
spec:
  type: ClusterIP
  selector:
    app: knjizenje
  ports:
    - port: 8081
      protocol: TCP
      targetPort: knjizenje
