k8s-prod/app/nabavka-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nabavka
  namespace: racunovodstvo-dev
  labels:
    app: nabavka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nabavka
  template:
    metadata:
      labels:
        app: nabavka
    spec:
      serviceAccount: discovery-client
      containers:
        - image: ghcr.io/raf-si-2021/racunovodstvo-nabavka:latest
          name: nabavka
          imagePullPolicy: Always
          ports:
            - name: nabavka
              containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: nabavka
  namespace: racunovodstvo-dev
  labels:
    app: nabavka
spec:
  type: ClusterIP
  selector:
    app: nabavka
  ports:
    - port: 8084
      protocol: TCP
      targetPort: nabavka
