k8s-prod/app/preduzece-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preduzece
  namespace: racunovodstvo-prod
  labels:
    app: preduzece
spec:
  replicas: 1
  selector:
    matchLabels:
      app: preduzece
  template:
    metadata:
      labels:
        app: preduzece
    spec:
      serviceAccount: discovery-client
      containers:
        - image: ghcr.io/raf-si-2021/racunovodstvo-preduzece:latest
          name: racunovodstvo-preduzece-service
          imagePullPolicy: Always
          ports:
            - name: preduzece
              containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: preduzece
  namespace: racunovodstvo-prod
  labels:
    app: preduzece
spec:
  type: ClusterIP
  selector:
    app: preduzece
  ports:
    - port: 8083
      protocol: TCP
      targetPort: preduzece
